k8s/home/cluster-apps/namespace/jgleon/foundervtt-jgleon/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: leonvtt
  name: leonvtt
  namespace: jgleon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leonvtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: leonvtt
    spec:
      containers:
      - image: felddy/foundryvtt:release
        name: leonvtt
        volumeMounts:
          - mountPath: /data
            name: data
        livenessProbe:
          tcpSocket:
            port: 30000
          initialDelaySeconds: 5
          periodSeconds: 30000
      volumes:
        - name: data
          persistentVolumeClaim:
              claimName: leonvtt-data
